--- a/core/templates/authenticated/assignments_table/practice.html
+++ b/core/templates/authenticated/assignments_table/practice.html
@@ -33,7 +33,7 @@
 {% endblock due_column_data %}
 
 {% block subject_column_data %}
-    {{ assignment.subject }}
+    <td>{{ assignment.subject }}</td>
 {% endblock subject_column_data %}
 
 {% block infix_column_data %}
