--- a/core/templates/authenticated/settings/listings.html
+++ b/core/templates/authenticated/settings/listings.html
@@ -1,6 +1,6 @@
 <div>
     <label> {{ listings_title }}:</label>
-    <div class="margin-left-30 margin-top-neg-30">
+    <div>
         <ul>
         {% for listing in listings %}
             <li> {{ listing }} </li>
