--- a/core/templates/authenticated/settings/parent.html
+++ b/core/templates/authenticated/settings/parent.html
@@ -3,7 +3,7 @@
 {% block custom_data %}
     <div>
         <label> Children: </label>
-        <div class="margin-left-30 margin-top-neg-30">
+        <div>
             <ul id='child_info_list'>
             {% for child_info in vm.authenticated_body.children %}
                 <li>
