--- a/core/static/css/authenticated/userinfo.css
+++ b/core/static/css/authenticated/userinfo.css
@@ -66,11 +66,17 @@
 
 #announcements_container {
     margin-top: -3px;
-    width: 300px;
+    width: 400px;
     height: auto;
     max-height: 500px;
     overflow-x: hidden;
     background-color: white;
+}
+
+@media (max-width: 768px) {
+    #announcements_container {
+        width: 100%;
+    }
 }
 
 #announcements_container .announcement_timestamp {
@@ -78,6 +84,16 @@
     position: absolute;
     right: 6px;
     font-family: "Helvetica", sans-serif;
+}
+
+#announcements_container .announcement_target {
+    font-size: 9px;
+    color: #3c3c3c;
+    margin-left: 10px;
+}
+
+#announcements_container .announcement_target > .glyphicon {
+    margin-right: 10px;
 }
 
 #announcements_container .announcement_source {
@@ -89,7 +105,7 @@
     font-size: 16px;
     font-family: Arial, sans-serif;
     color: rgba(0, 0, 0, 0.59);
-    margin-top: 5px;
+    margin-top: 10px;
 }
 
 #announcements_container > li {
