--- a/core/templates/authenticated/assignments_table/corrected_parent.html
+++ b/core/templates/authenticated/assignments_table/corrected_parent.html
@@ -5,5 +5,5 @@
 {% endblock table_help_tip %}
 
 {% block subject_column_data %}
-    {% include 'authenticated/widgets/parent_room_link.html' with room=assignment.target child_id=child_id only %}
+    <td>{% include 'authenticated/widgets/parent_room_link.html' with room=assignment.target child_id=child_id only %}</td>
 {% endblock subject_column_data %}
