--- a/core/templates/authenticated/focus_id/parent.html
+++ b/core/templates/authenticated/focus_id/parent.html
@@ -18,8 +18,8 @@
 {% endblock focusroom_body %}
 
 {% block assignments %}
-    {% include "authenticated/assignments_table/active_parent.html" with assignments=vm.authenticated_body.active_assignments child_id=vm.authenticated_body.child_id only %}
-    {% include "authenticated/assignments_table/corrected_parent.html" with assignments=vm.authenticated_body.corrected_assignments child_id=vm.authenticated_body.child_id only %}
+    {% include "authenticated/assignments_table/active_parent.html" with assignments=vm.authenticated_body.active_assignments child_id=vm.authenticated_body.child_id hide_subject_column="true" only %}
+    {% include "authenticated/assignments_table/corrected_parent.html" with assignments=vm.authenticated_body.corrected_assignments child_id=vm.authenticated_body.child_id hide_subject_column="true" only %}
 {% endblock assignments %}
 
 {% block focus_id_js %}
