--- a/core/templates/authenticated/focus_id/student.html
+++ b/core/templates/authenticated/focus_id/student.html
@@ -9,8 +9,8 @@
 {% endblock focusroom_body %}
 
 {% block assignments %}
-    {% include "authenticated/assignments_table/active_student.html" with assignments=vm.authenticated_body.active_assignments only %}
-    {% include "authenticated/assignments_table/corrected_student.html" with assignments=vm.authenticated_body.corrected_assignments only %}
+    {% include "authenticated/assignments_table/active_student.html" with assignments=vm.authenticated_body.active_assignments hide_subject_column="true" only %}
+    {% include "authenticated/assignments_table/corrected_student.html" with assignments=vm.authenticated_body.corrected_assignments hide_subject_column="true" only %}
 {% endblock assignments %}
 
 {% block focus_id_js %}
