--- a/core/templates/authenticated/settings/common_account.html
+++ b/core/templates/authenticated/settings/common_account.html
@@ -2,3 +2,6 @@
 <div><label>User ID : </label> {{ settings_common.username }}</div>
 <div><label>Email ID : </label> {{ settings_common.email }} </div>
 <div><label>Phone : </label> {{ settings_common.phone }}</div>
+{% if settings_common.school %}
+    <div><label>School : </label> {{ settings_common.school }}</div>
+{% endif %}
