--- a/core/templates/authenticated/subject_id/open_student.html
+++ b/core/templates/authenticated/subject_id/open_student.html
@@ -9,8 +9,8 @@
 {% endblock subjectroom_body %}
 
 {% block assignments %}
-    {% include "authenticated/assignments_table/open_uncorrected.html" with assignments=vm.authenticated_body.uncorrected_assignments only %}
-    {% include "authenticated/assignments_table/open_corrected.html" with assignments=vm.authenticated_body.corrected_assignments only %}
+    {% include "authenticated/assignments_table/open_uncorrected.html" with assignments=vm.authenticated_body.uncorrected_assignments hide_subject_column="true" only %}
+    {% include "authenticated/assignments_table/open_corrected.html" with assignments=vm.authenticated_body.corrected_assignments hide_subject_column="true" only %}
 {% endblock assignments %}
 
 {% block subject_id_js %}
